--- a/pom.xml
+++ b/pom.xml
@@ -168,6 +168,13 @@
 
     <build>
         <plugins>
+	    <plugin>
+		<groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-surefire-plugin</artifactId>
+		<configuration>
+		    <testFailureIgnore>true</testFailureIgnore>
+		</configuration>
+	    </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>flatten-maven-plugin</artifactId>
