--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,7 +4,7 @@ sonar.projectKey=milestone:webgoat
 # --- optional properties ---
 
 # defaults to project key
-sonar.projectName=milestone webgoat
+sonar.projectName=milestone:webgoat
 # defaults to 'not provided'
 #sonar.projectVersion=1.0
  
