--- a/pom.xml
+++ b/pom.xml
@@ -140,7 +140,7 @@
         <module>webgoat-lessons</module>
         <module>webgoat-server</module>
         <module>webwolf</module>
-        <module>webgoat-integration-tests</module>
+<!--         <module>webgoat-integration-tests</module> -->
 		<module>docker</module><!-- copy required jars in preparation of docker all-in-one build -->
     </modules>
 
